--- a/ASP-Razor-Movies/Pages/Movies/Create.cshtml
+++ b/ASP-Razor-Movies/Pages/Movies/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model ASP_Razor_Movies.Pages.Movies.CreateModel
+@using ASP_Razor_Movies.Models 
 
 @{
     ViewData["Title"] = "Create";
@@ -25,7 +26,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Movie.Genre" class="control-label"></label>
-                <select asp-for="Movie.Genre" class="form-control"></select>
+                <select asp-for="Movie.Genre" class="form-control"
+                        asp-items="Html.GetEnumSelectList<Genres>()">
+                </select>
                 <span asp-validation-for="Movie.Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
