--- a/ASP-Razor-Movies/Pages/Movies/Index.cshtml
+++ b/ASP-Razor-Movies/Pages/Movies/Index.cshtml
@@ -5,12 +5,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of Movies</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a class="btn btn-success" asp-page="Create">Add Movie</a>
 </p>
-<table class="table">
+<table class="table table-bordered table-hover">
     <thead>
         <tr>
             <th>
@@ -44,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                <a class="btn btn-success" asp-page="./Edit" asp-route-id="@item.ID">Edit</a> 
+                <a class="btn btn-info" asp-page="./Details" asp-route-id="@item.ID">Details</a> 
+                <a class="btn btn-danger" asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
